--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,102 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.dark {
+    color-scheme: dark;
+}
+
+* {
+    @apply: "border-border";
+}
+html {
+    -webkit-text-size-adjust: 100%;
+    font-variation-settings: normal;
+}
+body {
+    @apply: "bg-background text-foreground min-h-screen antialiased font-sans";
+    font-feature-settings: "rlig" 1, "calt" 1;
+}
+
+/* Mobile tap highlight */
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-tap-highlight-color */
+html {
+    -webkit-tap-highlight-color: rgba(128, 128, 128, 0.5);
+}
+
+/* === Scrollbars === */
+
+::-webkit-scrollbar {
+    @apply: "w-2";
+    @apply: "h-2";
+}
+
+::-webkit-scrollbar-track {
+    @apply: "!bg-muted";
+}
+::-webkit-scrollbar-thumb {
+    @apply: "rounded-sm !bg-muted-foreground/30";
+}
+
+/* Firefox */
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-color#browser_compatibility */
+html {
+    scrollbar-color: hsl(215.4 16.3% 46.9% / 0.3);
+}
+
+html.dark {
+    scrollbar-color: hsl(215.4 16.3% 56.9% / 0.3);
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.antialised {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.step {
+    counter-increment: step;
+}
+
+.step:before {
+    @apply: "absolute w-9 h-9 bg-muted rounded-full font-mono font-medium text-center text-base inline-flex items-center justify-center -indent-px border-4 border-background";
+    @apply: "ml-[-50px] mt-[-4px]";
+    content: counter(step);
+}
+
+@media (max-width: 640px) {
+    .container {
+        @apply: "px-4";
+    }
+}
+
+div[class^="language-"] {
+    @apply: "mb-4 mt-6 max-h-[650px] overflow-x-auto md:rounded-lg border !bg-zinc-950 dark:!bg-zinc-900"
+}
+pre {
+    @apply: "py-4";
+}
+
+pre code {
+    @apply: "relative  font-mono text-sm" ;
+}
+
+pre code .line {
+    @apply: " px-4 min-h-[1.5rem] !py-0.5 w-full inline-block";
+}
+
+.line-number {
+    @apply: "min-h-[1.375rem] !text-sm !inline-block text-muted-foreground";
+}
+
+::view-transition-old(root),
+::view-transition-new(root) {
+animation-duration: 0.3s;
+}
